added card styles

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -8,7 +8,7 @@
     <% @lists.each do |list| %>
       <%= link_to list_path(list) do %>
       <div class="list-card-index">
-        <%# <%= image_tag 'source',  %> %>
+        <%= image_tag 'enter_the_dragen.jpg', alt: "movie poster" %>
         <div class="list-card-content">
         <%= list.name %>
         </div>
