--- a/app/assets/stylesheets/pages/_lists_index.scss
+++ b/app/assets/stylesheets/pages/_lists_index.scss
@@ -3,7 +3,8 @@
   justify-content: center;
   align-items: center;
   height: 400px;
-  background-image: linear-gradient(rgba(0,0,0,0.3));
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.5)), url(asset_path('cinema.jpg'));
   background-size: cover;
   background-position: center;
 
