--- a/app/assets/stylesheets/components/_list_card.scss
+++ b/app/assets/stylesheets/components/_list_card.scss
@@ -1,25 +1,36 @@
 .list-index-content {
-  padding: 100px;
+  padding: 30px 100px;
   display: flex;
   gap: 24px;
+  flex-wrap: wrap;
+  justify-content: center;
+  p {
+    padding: 0;
+    margin: 0;
+  }
+  a {
+    text-decoration: none;
+    color: black;
+  }
 }
 
 .list-card-index {
   width: 300px;
-  height: 250px;
+  height: 200px;
   border: 1px solid grey;
-  border-radius: 4px;
+  border-radius: 7px;
+  box-shadow: 0px 0px 12px 2px #00000021;
 }
 
 .list-card-content {
   display: flex;
   align-items: center;
   justify-content: center;
-
+  height: 20%;
 }
 
 img {
   width: 100%;
   height: 80%;
-
+  object-fit: cover;
 }
