--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,7 +1,8 @@
-<h1>New Bookmark</h1>
-
-<%= simple_form_for [@list, @bookmark] do |f| %>
-  <%= f.input :comment %>
-  <%= f.association :movie %>
-  <%= f.submit "Submit bookmark", class: "btn btn-primary" %>
-<% end %>
+<div class="container mt-5">
+  <h3>Add a new movie to your <%= @list.name %> list</h3>
+  <%= simple_form_for [@list, @bookmark] do |f| %>
+    <%= f.input :comment %>
+    <%= f.association :movie %>
+    <%= f.submit class: "btn btn-primary" %>
+  <% end %>
+</div>
