--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,5 +1,8 @@
-<%= simple_form_for @list do |f| %>
-  <%= f.input :name %>
-  <%# <%= f.input :photo, as: :file %>
-  <%= f.submit class: 'btn btn-primary' %>
-<% end %>
+<div class="container mt-5">
+  <h2>Add a new list to your collection</h2>
+  <%= simple_form_for @list do |f| %>
+    <%= f.input :name %>
+    <%# <%= f.input :photo, as: :file %>
+    <%= f.submit class: 'btn btn-primary' %>
+  <% end %>
+</div>
