--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,10 +1,21 @@
-<%= @list.name %>
-<% @list.movies.each do |movie| %>
-  <%= movie.title %>
-  <% bookmark = Bookmark.find_by(list: @list, movie: movie) %>
-  <%= bookmark.comment %>
-  <%= link_to "delete", bookmark_path(bookmark), data: {turbo_method: :delete} %>
-  <% end %>
-<%= link_to "Add a movie", new_list_bookmark_path(@list) %>
+<div class="banner-show">
+  <h1><%= @list.name %></h1>
+</div>
 
-<%= link_to 'Homepage', lists_path %>
+<div class="list-index-content">
+  <% @list.movies.each do |movie| %>
+    <div class="list-card-index">
+      <%= image_tag 'enter_the_dragen.jpg', class: 'image-list-cover', alt: "image cover for list" %>
+      <div class="list-card-content">
+        <p><%= movie.title %></p>
+      </div>
+    </div>
+
+    <% bookmark = Bookmark.find_by(list: @list, movie: movie) %>
+  <% end %>
+</div>
+
+<div class="show-navigate">
+  <%= link_to 'Homepage', lists_path, class: 'btn btn-secondary' %>
+  <%= link_to "Add a movie", new_list_bookmark_path(@list), class: 'btn btn-success' %>
+</div>
