added cloudinary link

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -8,7 +8,8 @@
     <% @lists.each do |list| %>
       <%= link_to list_path(list) do %>
         <div class="list-card-index">
-          <%= image_tag 'enter_the_dragen.jpg', class: 'image-list-cover', alt: "image cover for list" %>
+          <%= cl_image_tag("enter_the_dragen_avcxs0",
+      width: 400, height: 300, crop: :fill) %>
 
         <div class="list-card-content">
           <p><%= list.name %></p>
